# template-project

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/include/: lib.hpp
src/lib/src/: lib.cpp
src/perf/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  dummy.cpp
